# bintec-remote-capi

./: Makefile.in  README  c_blockrw.c  c_environ.c  c_eviron.c  c_tcpopen.c  capiconf.h.in  capidef.h  capidump.c  capidump.h  capifax.c  capirecv.c  capitest.c  capitrace.c  configure  configure.in  connect.c  faxrecv.c  hexdump.c  hexdumpd.c  libcapi.c  libcapi.h  libcapi2.c  lorder  md5.c  md5.h  mkinstalldirs  poll.c  poll.h  rcapi.c  rcapi2.c  sectypes.h  userchk2.c
